# WebExtratorCli

./: .env.example  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: publish.yml
tests/: conftest.py  test_commands.py
webextrator_cli/: __init__.py  __main__.py  main.py
webextrator_cli/commands/: __init__.py  info.py  task.py  web.py
webextrator_cli/core/: __init__.py  client.py  config.py  exceptions.py  output.py
